[package]
name = "josephus-wasm"
version = "0.1.0"
edition = "2018"
authors = ["Jai Hanani <jaihanani8@gmail.com>"]
description = "Find the Survivor of the Josephus Problem"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"